// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template can configure compilation options 1`] = `
<div
  dangerouslySetInnerHTML={
    {
      "__html": "it configures compilation delimiters",
    }
  }
/>
`;

exports[`Template can configure custom rootTagName 1`] = `
<span
  dangerouslySetInnerHTML={
    {
      "__html": "",
    }
  }
/>
`;

exports[`Template can have Fragment as rootTagName with Preact component 1`] = `
<div>
  <span>
    test
  </span>
</div>
`;

exports[`Template can have Fragment as rootTagName with template 1`] = `
<div>
  <span>
    test
  </span>
</div>
`;

exports[`Template forward rootProps to the first node 1`] = `
<div
  className="className"
  dangerouslySetInnerHTML={
    {
      "__html": "",
    }
  }
  onClick={[Function]}
/>
`;
